<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="gov.ifsp.lorandi.pdm.meuscontatos.view.ContatoActivity">

    <EditText
        android:id="@+id/etContactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome" />

    <EditText
        android:id="@+id/telefoneTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/telefone" />

    <EditText
        android:id="@+id/emailTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <Button
        android:id="@+id/btSave"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textSize="20dp"
        android:text="@string/salvar" />

</LinearLayout>