<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50px"
    android:gravity="center_horizontal"
    tools:context="gov.ifsp.lorandi.pdm.meuscontatos.view.SignUpActivity">

    <EditText
        android:id="@+id/emailTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/senhaTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/reSenhaTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repita_senha"
        android:inputType="textPassword" />

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:onClick="registrar"
        android:textSize="25dp"
        android:background="@color/colorAccent"
        android:text="Cadastrar" />

</LinearLayout>